syntax = "proto3";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "Issues.API.Protos";

service GroupOfIssueService{
	rpc GetGroupsOfIssues(GetGroupsOfIssuesRequest) returns (GetGroupsOfIssuesResponse);
	rpc GetGroupOfIssues(GetGroupOfIssuesRequest) returns (GetGroupOfIssuesResponse);
	rpc CreateGroupOfIssues(CreateGroupOfIssuesRequest) returns (CreateGroupOfIssuesResponse);
	rpc RenameGroupOfIssues(RenameGroupOfIssuesRequest) returns (RenameGroupOfIssuesResponse);
	rpc ChangeShortNameForGroupOfIssues(ChangeShortNameForGroupOfIssuesRequest) returns (ChangeShortNameForGroupOfIssuesResponse);
	rpc DeleteGroupOfIssues(DeleteGroupOfIssuesRequest) returns (DeleteGroupOfIssuesResponse);
}


message GetGroupsOfIssuesRequest{
}

message GetGroupsOfIssuesResponse{
	repeated GroupOfIssue groups = 1;
}

message GetGroupOfIssuesRequest{
	string id = 1;
}

message GetGroupOfIssuesResponse{
	GroupOfIssue group = 1;
}

message CreateGroupOfIssuesRequest{
	string typeOfGroupId = 1;
	string name = 2;
	string shortName = 3;
}

message CreateGroupOfIssuesResponse{
	string id = 1;
}

message RenameGroupOfIssuesRequest{
	string id = 1;
	string newName = 2;
}

message RenameGroupOfIssuesResponse{

}

message DeleteGroupOfIssuesRequest{
	string id = 1;
}

message DeleteGroupOfIssuesResponse{

}

message ChangeShortNameForGroupOfIssuesRequest{
	string id = 1;
	string newShortName = 2;
}

message ChangeShortNameForGroupOfIssuesResponse{

}


message GroupOfIssue{
	string id = 1;
	string name = 2;
	string typeOfGroupId = 3;
	string shortName = 4;
	bool isInThrash = 5;
	google.protobuf.Timestamp timeOfDelete = 6;
}