syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Users.API.Protos";

service OrganizationService{
	rpc AddOrganization (AddOrganizationRequest) returns (AddOrganizationResponse);
	rpc GetOrganization (GetOrganizationRequest) returns (GetOrganizationResponse);
	rpc GetOrganizations (GetOrganizationsRequest) returns (GetOrganizationsResponse);
	rpc DeleteOrganization (DeleteOrganizationRequest) returns (DeleteOrganizationResponse);
}

message AddOrganizationRequest{
	string name = 1;
}

message AddOrganizationResponse{
	string organizationId = 1;
}

message GetOrganizationRequest{
	string organizationId = 1;
}

message GetOrganizationsRequest{}

message GetOrganizationsResponse{
	repeated Organization Organizations = 1;
}

message GetOrganizationResponse{
	Organization Organization = 1;
}

message Organization{
	string id = 1;
	string name = 2;
	bool enabled = 3;
	google.protobuf.Timestamp creationDate = 4;
}


message DeleteOrganizationRequest{
	string organizationId = 1;
}

message DeleteOrganizationResponse{
	
}


